2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/other.R (igraph.sample) : correct bug

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (callaway.traits.game) : added
	* interfaces/R/src/rinterface.c (R_igraph_growing_traits_game) : added

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_isoclass_34)
	(R_igraph_isomorphic_34) : updated
	
2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : correct bug for
	empty graphs

	* interfaces/R/igraph/R/topology.R (graph.isoclass)
	(graph.isomorphic) : added
	* interfaces/R/src/rinterface.c (R_igraph_isoclass_34)
	(R_igraph_isomorphic_34) : added

2006-02-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (rglplot.igraph) : omit labels if NA

2006-02-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.random)
	(layout.fruchterman.reingold, layout.kamada.kawai) : added dim argument
	(layout.sphere) : added
	(i.layout.norm) : bug corrected
	* interfaces/R/src/rinterface.c (R_igraph_layout_kamada_kawai_3d)
	(R_igraph_layout_fruchterman_reingold_3d)
	(R_igraph_layout_random_3d, R_igraph_layout_sphere) : added

	* interfaces/R/igraph/R/plot.R (rglplot.igraph) : added
	
2006-01-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold.grid) :
	added
	* interfaces/R/src/rinterface.c	
	(R_igraph_layout_fruchterman_reingold_grid) : added

2006-01-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.lgl) : added root,
	corrected maxiter
	* interfaces/R/src/rinterface.c (R_igraph_layout_lgl) : added root

2006-01-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.lgl) : change defaults

	* interfaces/R/igraph/R/plot.R (plot.igraph) : add xlim & ylim 
	parameters

2006-01-29  Gabor Csardi  <csardi@rmki.kfki.hu>
