@@ -57,7 +57,7 @@ export(graph, graph.adjacency, graph.star, graph.tree, graph.lattice,
 
 export(erdos.renyi.game, random.graph.game, degree.sequence.game,
        aging.prefatt.game, growing.random.game, barabasi.game,
-       callaway.traits.game)
+       callaway.traits.game, establishment.game)
 
 # community structure
 
