@@ -157,8 +157,20 @@ callaway.traits.game <- function(nodes, types, edge.per.step=1,
                                 pref.matrix=matrix(1, types, types),
                                 directed=FALSE) {
 
-  .Call("R_igraph_growing_traits_game", as.double(nodes),
+  .Call("R_igraph_callaway_traits_game", as.double(nodes),
         as.double(types), as.double(edge.per.step),
         as.double(type.dist), matrix(as.double(pref.matrix), types, types),
         as.logical(directed))
 }
+
+establishment.game <- function(nodes, types, k=1, type.dist=rep(1, types),
+                               pref.matrix=matrix(1, types, types),
+                               directed=FALSE) {
+  .Call("R_igraph_establishment_game", as.double(nodes),
+        as.double(types), as.double(k), as.double(type.dist),
+        matrix(as.double(pref.matrix), types, types),
+        as.logical(directed))
+}
+        
+
+                               
